--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <main>
     <div class="movie-grid">
       <div class="movie-item">
-        <a href="movie1.html">
+        <a href="https://7ent2.github.io/Tflixdata/">
           <img src="images/movie1.jpg" alt="Movie 1" class="movie-poster">
         </a>
         <h3>Movie 1</h3>
