--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </div>
 
       <div class="movie-item">
-        <a href="movie2.html">
+        <a href="https://7ent2.github.io/Tflixdata/">
           <img src="images/movie2.jpg" alt="Movie 2" class="movie-poster">
         </a>
         <h3>Movie 2</h3>
