--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
   <main>
     <div class="movie-grid">
       <div class="movie-item">
-        <a href="https://7ent2.github.io/Tflixdata/">
+        <a href="https://7ent2.github.io/Tflixdata/movie1.html">
           <img src="images/movie1.jpg" alt="Movie 1" class="movie-poster">
         </a>
         <h3>Movie 1</h3>
       </div>
 
       <div class="movie-item">
-        <a href="https://7ent2.github.io/Tflixdata/">
+        <a href="https://7ent2.github.io/Tflixdata/movie1.html">
           <img src="images/movie2.jpg" alt="Movie 2" class="movie-poster">
         </a>
         <h3>Movie 2</h3>
