--- a/index.html
+++ b/index.html
@@ -31,48 +31,9 @@
       <div class="hover-preview">
         <p>A great action movie</p>
       </div>
-      <div class="movie-rating">
-        <span class="star" data-rating="1">&#9733;</span>
-        <span class="star" data-rating="2">&#9733;</span>
-        <span class="star" data-rating="3">&#9733;</span>
-        <span class="star" data-rating="4">&#9733;</span>
-        <span class="star" data-rating="5">&#9733;</span>
-      </div>
     </div>
     <div class="movie-item comedy">
-      <img src="movie2-poster.jpg" alt="Movie 2" class="movie-poster">
-      <h3>Movie 2</h3>
-      <div class="hover-preview">
-        <p>A funny comedy</p>
-      </div>
-      <div class="movie-rating">
-        <span class="star" data-rating="1">&#9733;</span>
-        <span class="star" data-rating="2">&#9733;</span>
-        <span class="star" data-rating="3">&#9733;</span>
-        <span class="star" data-rating="4">&#9733;</span>
-        <span class="star" data-rating="5">&#9733;</span>
-      </div>
-    </div>
-    <div class="movie-item drama">
-      <img src="movie3-poster.jpg" alt="Movie 3" class="movie-poster">
-      <h3>Movie 3</h3>
-      <div class="hover-preview">
-        <p>A touching drama</p>
-      </div>
-      <div class="movie-rating">
-        <span class="star" data-rating="1">&#9733;</span>
-        <span class="star" data-rating="2">&#9733;</span>
-        <span class="star" data-rating="3">&#9733;</span>
-        <span class="star" data-rating="4">&#9733;</span>
-        <span class="star" data-rating="5">&#9733;</span>
-      </div>
-    </div>
-    <!-- Add more movies here -->
-  </div>
-
-  <script src="script.js"></script>
-</body>
-</html>
+      <img src="movie2-poster.jpg
 
 <!DOCTYPE html>
 <html lang="en">
