--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
   <!-- Movie Grid -->
   <div class="movie-grid">
     <div class="movie-item action">
-      <img src="movie1-poster.jpg" alt="Movie 1" class="movie-poster">
+     <a href="https://7ent2.github.io/Tflixdata/movie1.html">
+       <img src="movie1-poster.jpg" alt="Movie 1" class="movie-poster">
       <h3>Movie 1</h3>
       <div class="hover-preview">
         <p>A great action movie</p>
@@ -35,21 +36,6 @@
     <div class="movie-item comedy">
       <img src="movie2-poster.jpg
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Movie Library</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-
-  <header>
-    <h1>Welcome to the Movie Library</h1>
-  </header>
-
-  <main>
     <div class="movie-grid">
       <div class="movie-item">
         <a href="https://7ent2.github.io/Tflixdata/movie1.html">
