--- a/index.html
+++ b/index.html
@@ -34,24 +34,4 @@
       </div>
     </div>
     <div class="movie-item comedy">
-      <img src="movie2-poster.jpg
-
-    <div class="movie-grid">
-      <div class="movie-item">
-        <a href="https://7ent2.github.io/Tflixdata/movie1.html">
-          <img src="images/movie1.jpg" alt="Movie 1" class="movie-poster">
-        </a>
-        <h3>Movie 1</h3>
-      </div>
-
-      <div class="movie-item">
-        <a href="https://7ent2.github.io/Tflixdata/movie1.html">
-          <img src="images/movie2.jpg" alt="Movie 2" class="movie-poster">
-        </a>
-        <h3>Movie 2</h3>
-      </div>
-    </div>
-  </main>
-
-</body>
-</html>
+      <img src="movie2-poster.jpg"
