--- a/index.html
+++ b/index.html
@@ -35,3 +35,16 @@
     </div>
     <div class="movie-item comedy">
       <img src="movie2-poster.jpg"
+
+          <!-- Movie Grid -->
+  <div class="movie-grid">
+    <div class="movie-item sci-fi">
+     <a href="https://7ent2.github.io/Tflixdata/movie1.html">
+       <img src="movie2-poster.jpg" alt="Movie 2" class="movie-poster">
+      <h3>Movie 1</h3>
+      <div class="hover-preview">
+        <p>A great sci fi movie</p>
+      </div>
+    </div>
+    <div class="movie-item sci-fi">
+      <img src="movie2-poster.jpg"
