--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<!-- Channel Name -->
+<div class="channel-name">
+  <h1>Tflix - Movie Channel</h1>
+</div>
+  <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tflix movie</title>
