--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
   <div class="slider-container">
     <div class="slider">
       <a href="movie1.html">
-        <img src="movie1-poster.jpg" alt="Movie 1" class="slider-image">
+        <img src="download (3).jpeg" alt="Movie 1" class="slider-image">
         <div class="slider-caption">Movie 1</div>
       </a>
       <a href="movie2.html">
-        <img src="movie2-poster.jpg" alt="Movie 2" class="slider-image">
+        <img src="download (3).jpeg" alt="Movie 2" class="slider-image">
         <div class="slider-caption">Movie 2</div>
       </a>
       <a href="movie3.html">
-        <img src="movie3-poster.jpg" alt="Movie 3" class="slider-image">
+        <img src=download (3).jpeg" alt="Movie 3" class="slider-image">
         <div class="slider-caption">Movie 3</div>
       </a>
     </div>
@@ -44,21 +44,21 @@
         <!-- Movie Item 1 -->
         <div class="movie-item">
           <a href="movie1.html">
-            <img src="movie1-poster.jpg" alt="Movie 1" class="movie-poster">
+            <img src="download (3).jpeg" alt="Movie 1" class="movie-poster">
             <h3>Movie 1</h3>
           </a>
         </div>
         <!-- Movie Item 2 -->
         <div class="movie-item">
           <a href="movie2.html">
-            <img src="movie2-poster.jpg" alt="Movie 2" class="movie-poster">
+            <img src="download (3).jpeg" alt="Movie 2" class="movie-poster">
             <h3>Movie 2</h3>
           </a>
         </div>
         <!-- Movie Item 3 -->
         <div class="movie-item">
           <a href="movie3.html">
-            <img src="movie3-poster.jpg" alt="Movie 3" class="movie-poster">
+            <img src="download (3).jpeg" alt="Movie 3" class="movie-poster">
             <h3>Movie 3</h3>
           </a>
         </div>
@@ -67,21 +67,21 @@
         <!-- Movie Item 4 -->
         <div class="movie-item">
           <a href="movie4.html">
-            <img src="movie4-poster.jpg" alt="Movie 4" class="movie-poster">
+            <img src="download (3).jpeg" alt="Movie 4" class="movie-poster">
             <h3>Movie 4</h3>
           </a>
         </div>
         <!-- Movie Item 5 -->
         <div class="movie-item">
           <a href="movie5.html">
-            <img src="movie5-poster.jpg" alt="Movie 5" class="movie-poster">
+            <img src="download (3).jpeg" alt="Movie 5" class="movie-poster">
             <h3>Movie 5</h3>
           </a>
         </div>
         <!-- Movie Item 6 -->
         <div class="movie-item">
           <a href="movie6.html">
-            <img src="movie6-poster.jpg" alt="Movie 6" class="movie-poster">
+            <img src="download (3).jpeg" alt="Movie 6" class="movie-poster">
             <h3>Movie 6</h3>
           </a>
         </div>
