--- a/index.html
+++ b/index.html
@@ -1,95 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Movie Library</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tflix - Watch Movies</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <!-- Channel Name -->
-  <div class="channel-name">
-    <h1>Tflix - Movie Channel</h1>
-  </div>
-    <!-- Search Bar -->
-  <div class="search-bar">
-    <input type="text" id="search" placeholder="Search for a movie..." onkeyup="searchMovies()">
-  </div>
+    <!-- Channel Name -->
+    <header>
+        <h1>TFLIX MOVIES</h1>
+        <input type="text" id="searchBar" placeholder="Search movies..." onkeyup="searchMovies()">
+    </header>
 
-  <!-- Latest Updates Slider -->
-  <div class="slider-container">
-    <div class="slider">
-      <a href="movie1.html">
-        <img src="download (3).jpeg" alt="Movie 1" class="slider-image">
-        <div class="slider-caption">Movie 1</div>
-      </a>
-      <a href="movie2.html">
-        <img src="download (3).jpeg" alt="Movie 2" class="slider-image">
-        <div class="slider-caption">Movie 2</div>
-      </a>
-      <a href="movie3.html">
-        <img src=download (3).jpeg" alt="Movie 3" class="slider-image">
-        <div class="slider-caption">Movie 3</div>
-      </a>
-    </div>
-  </div>
+    <!-- Latest Movie Slider -->
+    <div class="slider-container"></div>
 
-  <!-- Main Container -->
-  <div class="container">
-    
-    <!-- Movie Grid - 3x2 layout -->
-    <div class="movie-grid">
-      <div class="row">
-        <!-- Movie Item 1 -->
-        <div class="movie-item">
-          <a href="movie1.html">
-            <img src="download (3).jpeg" alt="Movie 1" class="movie-poster">
-            <h3>Movie 1</h3>
-          </a>
-        </div>
-        <!-- Movie Item 2 -->
-        <div class="movie-item">
-          <a href="movie2.html">
-            <img src="download (3).jpeg" alt="Movie 2" class="movie-poster">
-            <h3>Movie 2</h3>
-          </a>
-        </div>
-        <!-- Movie Item 3 -->
-        <div class="movie-item">
-          <a href="movie3.html">
-            <img src="download (3).jpeg" alt="Movie 3" class="movie-poster">
-            <h3>Movie 3</h3>
-          </a>
-        </div>
-      </div>
-      <div class="row">
-        <!-- Movie Item 4 -->
-        <div class="movie-item">
-          <a href="movie4.html">
-            <img src="download (3).jpeg" alt="Movie 4" class="movie-poster">
-            <h3>Movie 4</h3>
-          </a>
-        </div>
-        <!-- Movie Item 5 -->
-        <div class="movie-item">
-          <a href="movie5.html">
-            <img src="download (3).jpeg" alt="Movie 5" class="movie-poster">
-            <h3>Movie 5</h3>
-          </a>
-        </div>
-        <!-- Movie Item 6 -->
-        <div class="movie-item">
-          <a href="movie6.html">
-            <img src="download (3).jpeg" alt="Movie 6" class="movie-poster">
-            <h3>Movie 6</h3>
-          </a>
-        </div>
-      </div>
-    </div>
-    
-  </div>
+    <!-- Movie Grid -->
+    <div class="movie-grid"></div>
 
-  <script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
